<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">15sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string name="app_name">APP</string>
    <string name="NombreUsuario">Nombre de Usuario</string>
    <string name="Contrasena">Contrasena</string>
    <string name="RepetirContrasena">Repetir Contrasena</string>
    <string name="Nombre">Nombre</string>
    <string name="Sexo">Sexo</string>
    <string name="Edad">Edad</string>
    <string name="Estatura">Estatura en cm</string>
    <string name="Peso">Peso en Kilos</string>
    <string name="Objetivo">Objetivo</string>
    <string name="Registrarse">Registrar</string>
    <string name="IniciarSesion">Iniciar Sesion</string>
    <string name="CerrarSesion">Cerrar Sesion</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_registro">Registro Activity</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="Dietas">Dieta Semanal</string>
    <string name="Ejercisios">Ejercisios</string>
    <string name="Consejos">Consejos</string>
    <string name="Logout">Cerrar Sesion</string>
    <string name="FragmentDieta">En esta seccion encontraras \n tu dieta semanal basada en tu indice de masa corporal y\n
        ademas organizada en 5 comidas al dia, podras tambien consultar siempre cuantas son las calorias que estas consumiendo.</string>
    <string name="FragmentEjercisios">En esta seccion encontraras \n 
        tu rutina semanal de ejercisios, ademas podras ver videos de como realizar\n
        los ejercisios de una manera correcta para que puedas aprovechar\n sus beneficios al maximo.</string>
    <string name="FragmentConsejos">En esta seccion encontraras \n 
       consejos realcionados con tu salud.</string>

    <string-array name="sexo">
        <item> Masculino </item>
        <item> Femenino </item>
    </string-array>
    <string-array name="objetivo">
        <item> Adelgazar</item>
        <item> Aumentar masa muscular </item>
        <item>Mantenerse en forma</item>
    </string-array>
    <string-array name="Semanas">
        <item> Semana 1 </item>
        <item> Semana 2 </item>
        <item> Semana 3 </item>
        <item> Semana 4 </item>
    </string-array>

    <string name="title_activity_prototipo">Prototipo</string>
    <string name="title_activity_activity_dietas_diarias">ActivityDietasDiarias</string>
    <string name="title_activity_fragmento_dia1">FragmentoDia1</string>

</resources>