<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/img3"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:background="@drawable/edittext_default_bg"
        android:drawableLeft="@drawable/user"
        android:hint="@string/NombreUsuario"
        android:padding="10dp"
        android:textColorHint="#bbbbbb" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:background="@drawable/edittext_default_bg"
        android:drawableLeft="@drawable/password"
        android:hint="@string/Contrasena"
        android:padding="10dp"
        android:password="true"
        android:textColorHint="#cccccc" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/DefaultButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/button_default_bg"
        android:padding="10dp"
        android:text="@string/IniciarSesion" />

    <Button
        android:id="@+id/btnRegistrarse"
        style="@style/DefaultButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/button_default_bg"
        android:padding="10dp"
        android:text="@string/Registrarse" />

</LinearLayout>